// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageHotspots image smaller than card, minimap and zoomcontrols should be hidden 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "560px",
          "width": "560px",
        }
      }
    >
      <div
        onBlur={[Function]}
        onMouseOut={[Function]}
        style={
          Object {
            "background": "#eee",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <img
          alt="Sample image"
          onLoad={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          src="MunichBuilding.png"
          style={
            Object {
              "left": undefined,
              "position": "relative",
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "left": undefined,
              "margin": "auto",
              "pointerEvents": "none",
              "position": "absolute",
              "right": "auto",
              "top": undefined,
            }
          }
        >
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 bnYUXp"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-10-20"
              className="bx--tooltip__label"
              id="hotspot-10-20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 kDDGXo"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-10"
              className="bx--tooltip__label"
              id="hotspot-50-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="blue"
                focusable="false"
                height={25}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={25}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 gFMCuA"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-30-40"
              className="bx--tooltip__label"
              id="hotspot-30-40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="blue"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 hsZfSY"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-60"
              className="bx--tooltip__label"
              id="hotspot-50-60"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="green"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "bottom": 10,
              "pointerEvents": "auto",
              "position": "absolute",
              "right": 10,
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom in"
            type="button"
          >
            +
          </button>
          <br />
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom out"
            type="button"
          >
            -
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageHotspots landscape image & landscape container 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "300px",
          "width": "450px",
        }
      }
    >
      <div
        onBlur={[Function]}
        onMouseOut={[Function]}
        style={
          Object {
            "background": "#eee",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <img
          alt="Sample image"
          onLoad={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          src="landscape.jpg"
          style={
            Object {
              "left": undefined,
              "position": "relative",
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "left": undefined,
              "margin": "auto",
              "pointerEvents": "none",
              "position": "absolute",
              "right": "auto",
              "top": undefined,
            }
          }
        >
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 bnYUXp"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-10-20"
              className="bx--tooltip__label"
              id="hotspot-10-20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 kDDGXo"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-10"
              className="bx--tooltip__label"
              id="hotspot-50-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="blue"
                focusable="false"
                height={25}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={25}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 gFMCuA"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-30-40"
              className="bx--tooltip__label"
              id="hotspot-30-40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="blue"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 hsZfSY"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-60"
              className="bx--tooltip__label"
              id="hotspot-50-60"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="green"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "bottom": 10,
              "pointerEvents": "auto",
              "position": "absolute",
              "right": 10,
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom in"
            type="button"
          >
            +
          </button>
          <br />
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom out"
            type="button"
          >
            -
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageHotspots landscape image & portrait container 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "300px",
          "width": "250px",
        }
      }
    >
      <div
        onBlur={[Function]}
        onMouseOut={[Function]}
        style={
          Object {
            "background": "#eee",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <img
          alt="Sample image"
          onLoad={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          src="landscape.jpg"
          style={
            Object {
              "left": undefined,
              "position": "relative",
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "left": undefined,
              "margin": "auto",
              "pointerEvents": "none",
              "position": "absolute",
              "right": "auto",
              "top": undefined,
            }
          }
        >
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 bnYUXp"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-10-20"
              className="bx--tooltip__label"
              id="hotspot-10-20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 kDDGXo"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-10"
              className="bx--tooltip__label"
              id="hotspot-50-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="blue"
                focusable="false"
                height={25}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={25}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 gFMCuA"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-30-40"
              className="bx--tooltip__label"
              id="hotspot-30-40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="blue"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 hsZfSY"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-60"
              className="bx--tooltip__label"
              id="hotspot-50-60"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="green"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "bottom": 10,
              "pointerEvents": "auto",
              "position": "absolute",
              "right": 10,
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom in"
            type="button"
          >
            +
          </button>
          <br />
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom out"
            type="button"
          >
            -
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageHotspots portrait image & landscape container 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "300px",
          "width": "450px",
        }
      }
    >
      <div
        onBlur={[Function]}
        onMouseOut={[Function]}
        style={
          Object {
            "background": "#eee",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <img
          alt="Sample image"
          onLoad={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          src="portrait.jpg"
          style={
            Object {
              "left": undefined,
              "position": "relative",
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "left": undefined,
              "margin": "auto",
              "pointerEvents": "none",
              "position": "absolute",
              "right": "auto",
              "top": undefined,
            }
          }
        >
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 bnYUXp"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-10-20"
              className="bx--tooltip__label"
              id="hotspot-10-20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 kDDGXo"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-10"
              className="bx--tooltip__label"
              id="hotspot-50-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="blue"
                focusable="false"
                height={25}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={25}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 gFMCuA"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-30-40"
              className="bx--tooltip__label"
              id="hotspot-30-40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="blue"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 hsZfSY"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-60"
              className="bx--tooltip__label"
              id="hotspot-50-60"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="green"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "bottom": 10,
              "pointerEvents": "auto",
              "position": "absolute",
              "right": 10,
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom in"
            type="button"
          >
            +
          </button>
          <br />
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom out"
            type="button"
          >
            -
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageHotspots portrait image & portrait container 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "300px",
          "width": "225px",
        }
      }
    >
      <div
        onBlur={[Function]}
        onMouseOut={[Function]}
        style={
          Object {
            "background": "#eee",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <img
          alt="Sample image"
          onLoad={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          src="portrait.jpg"
          style={
            Object {
              "left": undefined,
              "position": "relative",
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "left": undefined,
              "margin": "auto",
              "pointerEvents": "none",
              "position": "absolute",
              "right": "auto",
              "top": undefined,
            }
          }
        >
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 bnYUXp"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-10-20"
              className="bx--tooltip__label"
              id="hotspot-10-20"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 kDDGXo"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-10"
              className="bx--tooltip__label"
              id="hotspot-50-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                fill="blue"
                focusable="false"
                height={25}
                preserveAspectRatio="xMidYMid meet"
                title=""
                viewBox="0 0 16 16"
                width={25}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.9,13.3l-6.5-12C8.3,1,8,0.9,7.8,1.1c-0.1,0-0.2,0.1-0.2,0.2l-6.5,12c-0.1,0.2-0.1,0.3,0,0.5C1.2,13.9,1.3,14,1.5,14h13	c0.2,0,0.3-0.1,0.4-0.2C15,13.6,15,13.4,14.9,13.3z M7.4,5.5h1.1v4H7.4V5.5z M8,12.2c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.3,0.8,0.8S8.4,12.2,8,12.2z"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 gFMCuA"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-30-40"
              className="bx--tooltip__label"
              id="hotspot-30-40"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="blue"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
          <div
            className="Hotspot__StyledHotspot-nlpwmi-0 hsZfSY"
          >
            <div
              aria-describedby={null}
              aria-labelledby="hotspot-50-60"
              className="bx--tooltip__label"
              id="hotspot-50-60"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                height={25}
                width={25}
              >
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="none"
                  opacity="1"
                  r={11.5}
                  stroke="white"
                  strokeWidth="2"
                />
                <circle
                  cx={12.5}
                  cy={12.5}
                  fill="green"
                  opacity="0.7"
                  r={11.5}
                  stroke="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "bottom": 10,
              "pointerEvents": "auto",
              "position": "absolute",
              "right": 10,
            }
          }
        >
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom in"
            type="button"
          >
            +
          </button>
          <br />
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "#fff",
                "border": "none",
                "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                "height": "25px",
                "width": "25px",
              }
            }
            title="Zoom out"
            type="button"
          >
            -
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
